ImageStatistics now does sigma-clipping
Sigma-clipping can now be done with ImageStatistics. Te major change
was that the sigma-clipping functions in statistics.c now accept an
argument to print the results in each round.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
 	open like the rest of the histogram bins. This also includes
 	floating point rounding error.
 	(cumulativefp): Same as the histogram function.
+	(sigmaclip_certainnum): Printing is now an option.
+	(sigmaclip_converge): Printing is now an option.
 
 	* lib/mode.c (makemirrorplots): New name for the old
 	savemodeplots.
